--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-        classpath 'io.fabric.tools:gradle:1.+'
+        classpath 'io.fabric.tools:gradle:1.27.1'
     }
 }
 
@@ -151,7 +151,7 @@ dependencies {
         transitive = true
     }
 
-    compile('com.smartpesa:sdk:4.0.0-SNAPSHOT-7') {
+    compile('com.smartpesa:sdk:4.0.0-SNAPSHOT-28') {
         transitive = true
         changing = true
     }
@@ -205,7 +205,6 @@ dependencies {
     compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
     compile 'com.android.support:support-v4:26.0.1'
-    compile 'com.google.android.gms:play-services-maps:11.0.4'
     compile 'com.wang.avi:library:2.1.3'
     compile 'hanks.xyz:htextview-library:0.1.5'
     compile 'com.github.badoualy:stepper-indicator:1.0.6'
