--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,7 +151,7 @@ dependencies {
         transitive = true
     }
 
-    compile('com.smartpesa:sdk:4.0.0-SNAPSHOT-32') {
+    compile('com.smartpesa:sdk:4.0.1.1') {
         transitive = true
         changing = true
     }
