--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,29 +5,26 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-apply plugin: 'com.neenbedankt.android-apt'
-
 buildscript {
     repositories {
         mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
-        classpath 'io.fabric.tools:gradle:1.27.1'
+        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'io.fabric.tools:gradle:1.28.1'
     }
 }
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '26.0.1'
+    compileSdkVersion 28
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.smartpesa.smartpesa"
-        minSdkVersion 16
-        targetSdkVersion 23
+        minSdkVersion 22
+        targetSdkVersion 28
 
         loadVersionSettings('version.properties')
         versionName getVName()
@@ -50,8 +47,8 @@ android {
             applicationIdSuffix '.dev'
         }
         release {
-//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-//            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled true
             signingConfig signingConfigs.release
         }
     }
@@ -73,6 +70,7 @@ android {
         }
     }
 
+    flavorDimensions "version"
     productFlavors {
         smartpesa {
             applicationId = "com.smartpesa.smartpesa"
@@ -83,6 +81,16 @@ android {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
         maven { url 'https://maven.fabric.io/public' }
+        maven {
+            url "https://bitbucket.org/smartpesa/maven/raw/master"
+            credentials {
+                username "YOUR_BITBUCKET_USERNAME"
+                password "YOUR_BITBUCKET_PASSWORD"
+            }
+            authentication{
+                basic(BasicAuthentication)
+            }
+        }
     }
 
     packagingOptions {
@@ -122,8 +130,8 @@ def buildDate() {
 }
 
 ext {
-    SUPPORT_V7_VERSION = "26.0.1"
-    DAGGER_VERSION = "2.12"
+    SUPPORT_V7_VERSION = "28.0.0"
+    DAGGER_VERSION = "2.19"
 }
 
 configurations.all {
@@ -140,87 +148,76 @@ configurations.all {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
-    compile "com.android.support:appcompat-v7:${SUPPORT_V7_VERSION}"
-    compile "com.android.support:recyclerview-v7:${SUPPORT_V7_VERSION}"
-    compile "com.android.support:design:${SUPPORT_V7_VERSION}"
-    compile "com.android.support:cardview-v7:${SUPPORT_V7_VERSION}"
-
-    compile('com.mikepenz:materialdrawer:4.3.7@aar') {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation "com.android.support:appcompat-v7:${SUPPORT_V7_VERSION}"
+    implementation "com.android.support:recyclerview-v7:${SUPPORT_V7_VERSION}"
+    implementation "com.android.support:design:${SUPPORT_V7_VERSION}"
+    implementation "com.android.support:cardview-v7:${SUPPORT_V7_VERSION}"
+    implementation('com.mikepenz:materialdrawer:4.3.7@aar') {
         transitive = true
     }
-
-    compile('com.smartpesa:sdk:4.0.0-SNAPSHOT-28') {
+    implementation('com.smartpesa:sdk:4.0.1.4') {
         transitive = true
         changing = true
     }
-
-    compile('com.smartpesa:ota:3.8.0') {
-        transitive = true
-        changing = true
-    }
-
-    compile('com.smartpesa:spconnect:2.2.0') {
+    implementation('com.smartpesa:spconnect:2.2.1') {
         changing = true;
     }
-
-    androidTestCompile('com.android.support.test:runner:0.4.1') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test:rules:0.4.1') {
-        exclude module: 'support-annotations'
-    }
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.1') {
-        exclude module: 'support-annotations'
-    }
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
+    implementation('com.github.afollestad.material-dialogs:core:0.8.5.7@aar') {
         transitive = true
     }
-    compile('com.github.florent37:androidparallax:1.0.1@aar') {
+    implementation('com.github.florent37:androidparallax:1.0.1@aar') {
         transitive = true
     }
-
-    compile "com.google.dagger:dagger-android:$DAGGER_VERSION"
-    compile "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
-    apt "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
-    apt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
-
-    compile('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
+    implementation "com.google.dagger:dagger-android:$DAGGER_VERSION"
+    implementation "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
         transitive = true;
     }
-    compile 'javax.annotation:javax.annotation-api:1.2'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.jpardogo.materialtabstrip:library:1.0.6'
-    compile 'com.jakewharton.timber:timber:4.1.0'
-    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
-    compile 'se.emilsjolander:stickylistheaders:2.7.0'
-    compile 'com.skyfishjy.ripplebackground:library:1.0.1'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.easing:library:1.0.1@aar'
-    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
-    compile 'com.github.PhilJay:MPAndroidChart:v2.1.3'
-    compile 'com.yalantis:phoenix:1.2.2'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
-    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
-    compile 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    compile 'com.android.support:support-v4:26.0.1'
-    compile 'com.wang.avi:library:2.1.3'
-    compile 'hanks.xyz:htextview-library:0.1.5'
-    compile 'com.github.badoualy:stepper-indicator:1.0.6'
-    compile 'com.android.support:multidex:1.0.1'
-    compile 'me.dm7.barcodescanner:zxing:1.9.8'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.github.kenglxn.QRGen:android:2.3.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    androidTestCompile 'com.google.code.findbugs:jsr305:3.0.1'
-    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'javax.annotation:javax.annotation-api:1.2'
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    implementation 'com.jpardogo.materialtabstrip:library:1.0.6'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'uk.co.chrisjenx:calligraphy:2.3.0'
+    implementation 'se.emilsjolander:stickylistheaders:2.7.0'
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
+    implementation 'com.nineoldandroids:library:2.4.0'
+    implementation 'com.daimajia.easing:library:1.0.1@aar'
+    implementation 'com.daimajia.androidanimations:library:1.1.3@aar'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.1.3'
+    implementation 'com.yalantis:phoenix:1.2.3'
+    implementation 'com.github.castorflex.smoothprogressbar:library:1.1.0'
+    implementation 'com.weiwangcn.betterspinner:library-material:1.1.0'
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.wang.avi:library:2.1.3'
+    implementation 'hanks.xyz:htextview-library:0.1.5'
+    implementation 'com.github.badoualy:stepper-indicator:1.0.6'
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.github.kenglxn.QRGen:android:2.3.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+
+    androidTestImplementation('com.android.support.test:runner:0.4.1') {
+        exclude module: 'support-annotations'
+    }
+    androidTestImplementation('com.android.support.test:rules:0.4.1') {
+        exclude module: 'support-annotations'
+    }
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.1') {
+        exclude module: 'support-annotations'
+    }
+    androidTestImplementation 'com.google.code.findbugs:jsr305:3.0.2'
+
+    annotationProcessor "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
+    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 }
 
 project.afterEvaluate {
     println("afterEvaluate")
-
-
     tasks.each { theTask ->
         if (theTask.name.matches("assemble.+Release")) {
             theTask.doLast {
