--- a/build.gradle
+++ b/build.gradle
@@ -2,23 +2,23 @@
 
 buildscript {
     repositories {
+        maven { url 'https://maven.google.com' }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.3.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
-ext {
-    compileSdkVersion = 26
-    buildToolsVersion = "26.0.1"
-}
-
-
 allprojects {
     repositories {
+        maven { url 'https://maven.google.com' }
         jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
