--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,17 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
+
 buildscript {
     repositories {
         mavenCentral()
         maven { url 'https://maven.google.com' }
         maven { url 'https://maven.fabric.io/public' }
     }
+
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath 'io.fabric.tools:gradle:1.28.1'
+        classpath 'io.fabric.tools:gradle:1.+'
     }
 }
 
@@ -80,7 +82,6 @@ android {
     repositories {
         maven { url "https://jitpack.io" }
         maven { url "https://maven.google.com" }
-        maven { url 'https://maven.fabric.io/public' }
         maven {
             url "https://bitbucket.org/smartpesa/maven/raw/master"
             credentials {
@@ -176,9 +177,6 @@ dependencies {
     }
     implementation "com.google.dagger:dagger-android:$DAGGER_VERSION"
     implementation "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.2@aar') {
-        transitive = true;
-    }
     implementation 'javax.annotation:javax.annotation-api:1.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.jpardogo.materialtabstrip:library:1.0.6'
@@ -219,6 +217,7 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
 
 project.afterEvaluate {
