--- a/app/build.gradle
+++ b/app/build.gradle
@@ -142,7 +142,7 @@ configurations.all {
         def requested = details.requested
         if (requested.group == 'com.android.support') {
             if (!requested.name.startsWith("multidex")) {
-                details.useVersion '26.0.0'
+                details.useVersion '28.0.0'
             }
         }
     }
@@ -150,7 +150,7 @@ configurations.all {
 
 configurations {
     cleanedAnnotations
-    compile.exclude group: 'org.jetbrains' , module:'annotations'
+    compile.exclude group: 'org.jetbrains', module: 'annotations'
 }
 
 dependencies {
@@ -162,7 +162,7 @@ dependencies {
     implementation('com.mikepenz:materialdrawer:4.3.7@aar') {
         transitive = true
     }
-    implementation('com.smartpesa:sdk:4.0.1.6') {
+    implementation('com.smartpesa:sdk:4.0.0.32-BETA') {
         transitive = true
         changing = true
     }
@@ -218,6 +218,7 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation 'com.airbnb.android:lottie:2.7.0'
 }
 
 project.afterEvaluate {
