--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,16 @@ android {
                 basic(BasicAuthentication)
             }
         }
+        maven {
+            url "https://bitbucket.org/smartpesa/maven-beta/raw/master"
+            credentials {
+                username "YOUR_BITBUCKET_USERNAME"
+                password "YOUR_BITBUCKET_PASSWORD"
+            }
+            authentication{
+                basic(BasicAuthentication)
+            }
+        }
     }
 
     packagingOptions {
